# cxx-enumext

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: CI.yml
include/rust/: cxx_enumext.h  cxx_enumext_macros.h
macro/: Cargo.toml
macro/src/: lib.rs
src/: cxx_enumext.cpp  lib.rs
tests/: test.rs
tests/suite/: Cargo.toml  build.rs  data.rs  lib.rs  tests.cpp  tests.h
