[workspace]
members = ["macro", "tests/suite"]
resolver = "2"

[workspace.package]
version = "0.0.3"
edition = "2021"
categories = ["development-tools::ffi"]
keywords = ["ffi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ryex/cxx-enumext"

[workspace.dependencies]
cxx = "1.0.158"
cxx-build = "1.0.158"
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.94"
quote = "1.0.40"

[package]
name = "cxx-enumext"
description = "Generate cxx compatable `Trivial` bindings for rust enum types"
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

repository.workspace= true
links = "cxx-enumext"

[lib]
doctest = false

[dependencies]
cxx.workspace = true
cxx-enumext-macro = { path = "./macro", version = "0.0.3" }

[build-dependencies]
cxx-build.workspace = true

[dev-dependencies]
cxx-enumext-test-suite = { path = "./tests/suite" }
